write rozbor and algorithm description

--- a/task5/config.yml
+++ b/task5/config.yml
@@ -1,12 +1,12 @@
 RUN:
     out: ./out/t
-    in: ./inst
+    in: ./instNV
 GA:
-    generationsize: 100
-    generationcount: 100
-    mutation: 0.1
-    crossover: 0.7
+    generationsize: 500
+    generationcount: 200
+    mutation: 0.03
+    crossover: 0.5 1 0.1
     selection: 0.1
     selection_add: 2
     elitism: 1
-    fitness: 0.99
+    fitness: 0.95
