--- a/task5/requirements.txt
+++ b/task5/requirements.txt
@@ -10,7 +10,7 @@ ipykernel==5.1.0
 ipython==7.2.0
 ipython-genutils==0.2.0
 jedi==0.13.2
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==2.6.0
 jupyter-client==5.2.4
 jupyter-core==4.4.0
@@ -20,7 +20,7 @@ matplotlib==3.0.2
 mistune==0.8.4
 nbconvert==5.4.0
 nbformat==4.4.0
-notebook==5.7.4
+notebook>=5.7.8
 numpy==1.15.4
 pandas==0.23.4
 pandocfilters==1.4.2
@@ -34,7 +34,7 @@ Pygments==2.3.1
 pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
-PyYAML==3.13
+pyyaml>=4.2b1
 pyzmq==17.1.2
 scikit-learn==0.20.2
 scipy==1.2.0
